--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <section class="container" id="test">
-    <h1>To do list:</h1>
+    <h1>Lista de tarefas:</h1>
     <p>
       <input type="text" class="input">
       <button class="button">Adicionar</button>
